--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,6 +1,6 @@
 - links:
-  - name: Pricing
-    link: /pricing/
+  #- name: Pricing
+  #  link: /pricing/
   - name: Blog
     link: /blog/
   - name: About
@@ -8,32 +8,32 @@
   - name: Contact
     link: /contact/
 - links:
-  - name: Login
-    link: /
-    new_window: true
-  - name: Sign Up
-    link: /
-    new_window: true
+  #- name: Login
+  #  link: /
+  #  new_window: true
+  #- name: Sign Up
+  #  link: /
+  #  new_window: true
   - name: Docs
     link: /
     new_window: true
-  - name: Status
-    link: /
-    new_window: true
+  #- name: Status
+  #- link: /
+  #- new_window: true
 - links:
-  - name: Facebook
-    link: https://facebook.com
-    new_window: true
-    social_icon: Facebook
+  #- name: Facebook
+  #  link: https://facebook.com
+  #  new_window: true
+  #  social_icon: Facebook
   - name: Twitter
     link: https://twitter.com
     social_icon: Twitter
     new_window: true
-  - name: YouTube
-    link: https://youtube.com
-    social_icon: YouTube
-    new_window: true
-  - name: RSS
-    link: /feed.xml
-    social_icon: RSS
-    new_window: false
+  #- name: YouTube
+  #  link: https://youtube.com
+  #  social_icon: YouTube
+  #  new_window: true
+  #- name: RSS
+  #  link: /feed.xml
+  #  social_icon: RSS
+  #  new_window: false
