--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ logo: /siteicon.png
 description: The marketplace to connect product designers and developers with manufacturers
 author:
   name: 'OEM Central (GmbH|UG|Ltd|Inc)?'
-  email: hello@oem-central.com
+  email: contact@oem-central.com
   twitter: oem-central # twitter username without the @ symbol
 social:
   name: OEM Central
