Disable about page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,10 +6,10 @@
   link: /blog/
   new_window: false
   highlight: false
-- name: About
-  link: /about/
-  new_window: false
-  highlight: false
+#- name: About
+#  link: /about/
+#  new_window: false
+#  highlight: false
 - name: Contact
   link: /contact/
   new_window: false
