--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,8 +3,8 @@
   #  link: /pricing/
   - name: Blog
     link: /blog/
-  - name: About
-    link: /about/
+  #- name: About
+  #- link: /about/
   - name: Contact
     link: /contact/
 - links:
