--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,18 +2,18 @@
 #  link: /pricing/
 #  new_window: false
 #  highlight: false
-- name: Blog
-  link: /blog/
-  new_window: false
-  highlight: false
+#- name: Blog
+#  link: /blog/
+#  new_window: false
+#  highlight: false
 #- name: About
 #  link: /about/
 #  new_window: false
 #  highlight: false
-- name: Contact
-  link: /contact/
-  new_window: false
-  highlight: false
+#- name: Contact
+#  link: /contact/
+# new_window: false
+#  highlight: false
 #- name: Login
 #  link: /
 #  new_window: true
