--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -26,7 +26,7 @@
   #  new_window: true
   #  social_icon: Facebook
   - name: Twitter
-    link: https://twitter.com
+    link: https://twitter.com/OemCentral
     social_icon: Twitter
     new_window: true
   #- name: YouTube
